fix(#165): placeholder text color contrast
Expected Behavior

Placeholder text for Search, Select, Textarea and Textfield components should comply with WCAG 2.1 AA contrast ratio requirements with a contrast ratio between the foreground text color and the background color or at least 4.5:1.

Actual Behavior:

Currently, Coral-Spectrum uses var(--spectrum-global-color-gray-600); from Spectrum-CSS, for the ::placeholder text color in Search, Select, Textarea and Textfield components, which results in placeholder text with a contrast ratio of 3:1, which does not comply with WCAG 2.1 AA contrast ratio requirements.

Spectrum-CSS includes a fix for this in v3.0.1, (see adobe/spectrum-css@011ca54), updating Coral-Spectrum to use this version of Spectrum-CSS is not trivial.

A simpler suggested fix would be to change the value in Coral-Spectrum to use var(--spectrum-global-color-gray-700); to satisfy the requirement.

--- a/coral-component-select/src/styles/index.styl
+++ b/coral-component-select/src/styles/index.styl
@@ -79,3 +79,19 @@ coral-select-item {
     opacity: 0.01;
   }
 }
+
+.coral--dark ._coral-Dropdown-label.is-placeholder {
+  color: var(--spectrum-dark-global-color-gray-700);
+}
+
+.coral--darkest ._coral-Dropdown-label.is-placeholder {
+  color: var(--spectrum-darkest-global-color-gray-700);
+}
+
+.coral--light ._coral-Dropdown-label.is-placeholder {
+  color: var(--spectrum-light-global-color-gray-700);
+}
+
+.coral--lightest ._coral-Dropdown-label.is-placeholder {
+  color: var(--spectrum-lightest-global-color-gray-700);
+}
